done for the night

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
     <div id="main">
       <div id="input">
-        <form action="" method="POST">
-          <label>Starting word:
-          <input type="text" value="" id="startWord">
+        <form id="ladder_input" action="" method="POST">
+          <label>
+          <input type="text" value="Starting word" id="startWord">
           </label>
-          <label>Ending word:
-          <input type="text" value="" id="endWord">
+          <label>
+          <input type="text" value="Ending word" id="endWord">
           </label>
           <label>Allow anagrams:
           <input type="checkbox" value="true" id="anagrams">
@@ -33,12 +33,10 @@
         </form>
       </div>
         <div id="ladder-and-graph">
-        <div id="ladder">
-          <ul></ul>
-        </div>
-        <div id="graph">
-
-        </div>
+          <div id="ladder">
+          </div>
+          <div id="graph">
+          </div>
       </div>
     </div>
   </body>
