adding some stuff to check the README formatting

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
         text file from App Academy. 
       </p>
     </div>
+    <div id="images">
+      <a href="https://github.com/mxcrpntr/"><img src="github.png" height="50"></a> <a href=""><img src="linkedin.png" height="50"></a>
+    </div>
   </body>
 
 </html>
