--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/JSProject/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/JSProject/favicon-16x16.png">
     <script src="./dist/main.js"></script>
     <script src="./src/scripts/d3-v3-min.js"></script>
     <title>Word Ladder Generator</title>
