--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
 
-    <h1>Word Ladder<a id="infoAnchor"><sup><small>?</small></sup><a> Generator</h1>
+    <h1>Word Ladder<span class="rotate"><a id="infoAnchor" class="boldAnchor rotate" style="display: inline-block; background: none"><sup><small>?</small></sup><a></span> Generator</h1>
 
     <div id="main">
       <div id="left"><h3>{</h3></div>
@@ -90,10 +90,17 @@
         your inputs.
       </p>
       <br>
-      <a id="close">(close)</a>
+      <a id="close" class="boldAnchor" style="display: inline-block; background: none">(close)</a>
 
     </div>
     <div id="popup" class="hidden">
+    </div>
+    <div id="ladderPopUp" class="hidden">
+      <p></p>
+      <div id="ladderPopUpButtons">
+        <a class="boldAnchor" style="display: inline-block; background: none">yes</a>
+        <a class="boldAnchor" style="display: inline-block; background: none">no, thank you</a>
+      </div>
     </div>
 
     <div id="sources" class="hidden">
