committing all style changes from the weekend, including instructions for the diy ladder

--- a/index.html
+++ b/index.html
@@ -90,9 +90,12 @@
         your inputs.
       </p>
       <br>
-      <a id="close" class="boldAnchor" style="display: inline-block; background: none">(close)</a>
-
+      <p style="background: none; text-align: center; padding: 0; margin: 0;"><a id="close" class="boldAnchor" style="background: none;">(close)</a></p>
     </div>
+    <div id="xAnchor" class="boldAnchor hidden"><a>☒</a></div>
+    <div id="xAnchorpopup" class="boldAnchor hidden"><a>☒</a></div>
+
+
     <div id="popup" class="hidden">
     </div>
     <div id="ladderPopUp" class="hidden">
@@ -111,7 +114,7 @@
       </p>
     </div>
     <div id="images">
-      <a href="https://github.com/mxcrpntr/"><img src="github.png" height="50"></a> <a href=""><img src="linkedin.png" height="50"></a>
+      <a href="https://github.com/mxcrpntr/"><img src="github.png" height="40"></a> <a href="https://www.linkedin.com/in/max-carpenter-245746288/"><img src="linkedin.png" height="40"></a>
     </div>
   </body>
 
