--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
     <div id="ladderPopUp" class="hidden">
       <p></p>
       <div id="ladderPopUpButtons">
-        <a class="boldAnchor" style="display: inline-block; background: none">yes</a>
-        <a class="boldAnchor" style="display: inline-block; background: none">no, thank you</a>
+        <a class="boldAnchor2" style="display: inline-block; background: none">yes</a>
+        <a class="boldAnchor2" style="display: inline-block; background: none">no, thank you</a>
       </div>
     </div>
 
